# OCR-DNI

./: .gitattributes  .gitignore  README.md  pubspec.yaml
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  Native.cc  det_process.cc  dummy.cc  pipeline.cc  pipeline.h
android/app/src/main/kotlin/com/xiomi/xiomi/: MainActivity.kt  NativeOcr.kt
android/app/src/main/res/drawable/: launch_background.xml
assets/ocr_models/: README.md  config.txt
assets/templates/: padron_template.xlsx
docs/: MANUAL_TECNICO.md  MANUAL_USUARIO.md  README.md  REGISTRO_SOFTWARE.md
lib/: main.dart
lib/core/theme/: app_theme.dart
lib/database/: database_service.dart
lib/models/: app_stats.dart  ocr_result.dart  persona.dart  sede.dart
lib/screens/: data_screen.dart  detection_screen.dart  home_screen.dart  main_shell.dart  review_screen.dart  sede_selection_screen.dart  splash_screen.dart
lib/services/: app_initializer.dart  dni_text_parser.dart  excel_export_service.dart  ocr_service.dart
lib/widgets/: metric_card.dart  persona_card.dart  sede_switcher_button.dart
release/: README.md
test/: dni_text_parser_test.dart  widget_test.dart
